# minions

./: .pdm-python  pyproject.toml
.agents/skills/minions/: SKILL.md
.agents/skills/minions/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: minions-instincts.yaml
.codex/: AGENTS.md
JavaScript2/Samples/Home/: package-lock.json
JavaScript2/Samples/JavaScript/: package-lock.json  package.json
JavaScript2/Samples/React/: package-lock.json  package.json
JavaScript2/Samples/TypeScript/: package-lock.json  package.json
JavaScript2/Samples/Vue/: package-lock.json  package.json
apps/minions-webgpu/: package-lock.json  package.json
minion_logs/: 20250422_083635_which_library_i.json  20250422_083956_are_there_any_f.json
